Added functionality to buttons, renamed css classes.

--- a/src/index.html
+++ b/src/index.html
@@ -796,9 +796,9 @@
 				<!-- TODO: This list needs to be generated procedually, perhaps using Grunt -->
 				<audio id="audio" preload="auto"></audio>
 				<div class="music-player-controls">
-					<div class="button music-control" id="musicpause"></div>
-					<div class="button music-control" id="previous"></div>
-					<div class="button music-control" id="next"></div>
+					<div class="button music-control" id="pause-track"></div>
+					<div class="button music-control" id="previous-track"></div>
+					<div class="button music-control" id="next-track"></div>
 					<div class="button music-control" id="shuffle"></div>
 					<div class="progressbar">
 							<div class="bar songprogress"></div>
